@@ -137,7 +137,6 @@ along with systemd; If not, see <http://www.gnu.org/licenses/>.
 
       <xi:include href="standard-options.xml" xpointer="help" />
       <xi:include href="standard-options.xml" xpointer="version" />
-      <xi:include href="standard-options.xml" xpointer="no-pager" />
     </variablelist>
   </refsect1>
 
