@@ -8,6 +8,8 @@ systemd System and Service Manager
  * units:
     - don't output hostname to terminal at startup;
     - don't output sysctl keys to terminal at startup;
+ * busctl:
+    - remove pager;
  * bugfix:
     - fix open syslog stdout socket on execute;
  * remove bootctl program;
